# pact-passport

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: EXPERIMENTS.md  PACT_RESEARCH_PLAN.md  PACT_Specification.md  STAGE2_CHANGE_PLAN.md
examples/: demo.py
scripts/: nuc_bootstrap.sh  run_phase_a.sh  run_stage2_xmachine.sh
spec/: PACT_v1.md
spec/attacks/: attacks.json
spec/models/: PROOF_LOG.md  README.md  pact_core.spthy  pact_core_v0_8.spthy  pact_opaque.pv  pact_opaque_negative_control.pv  pact_rotation.spthy
src/pact/: __init__.py  _canonical.py  agent.py  capability.py  cli.py  crypto.py  errors.py  identity.py  message.py  receipt.py  store.py  visa.py
src/pact_passport/: __init__.py  _ablations.py  _chaos.py  agent.py  audit.py  capability.py  cli.py  errors.py  identity.py  message.py  policy.py  receipt.py  store.py  visa.py
tests/: conftest.py  test_ablations.py  test_async_server.py  test_attenuation.py  test_capability.py  test_cbor.py  test_cli.py  test_crypto.py  test_doctor.py  test_idempotency.py  test_identity.py  test_lak_channel.py  test_message.py  test_rate_limit.py  test_receipt.py  test_rotation.py  test_server.py  test_stage2_harness.py  test_store.py  test_v052_honesty.py  test_v053_input_validation.py  test_vectors.py
tests/baselines/: __init__.py  b0_raw.py  b0_tls.py  test_baselines.py
tests/integration/: conftest.py  test_a1_line_integrity.py  test_a2_rotation_continuity.py  test_a3_idempotency_storm.py  test_a4_content_length_fuzz.py  test_a5_envelope_malformation.py  test_a6_deadline_boundary.py  test_agent_ask.py  test_auth_hardening.py  test_b1_deep_chain_attenuation.py  test_b2_stolen_token.py  test_b3_deep_delegation.py  test_c1_sigkill_recovery.py  test_c2_jitter_streaming.py  test_c3_stream_partition.py  test_c4_refs_anchor.py  test_cap_envelope.py  test_capability_chain.py  test_concurrency_idempotency.py  test_concurrency_rate_limit.py  test_concurrency_revocation.py  test_concurrency_rotation.py  test_concurrency_scale.py  test_durable_idempotency.py  test_sandbox_smoke.py  test_streaming.py  test_two_agents.py  test_v_tier_protocol_advertisement.py  test_v_tier_v1_v7.py
tests/stage2/: __init__.py  _ablations.py  _harness.py  _prompts.py  _spawn_r1_remote.py  _spawn_remote_agent.py  adversary_loop.py  probe_a1_policy_injection.py  probe_a2_cost_lying.py  probe_a3_visa_partition.py  probe_a4_refs_forgery.py  probe_a5_rogue_delegator.py  probe_a6_v_amplification.py  probe_attr_ablations.py  (+23 more)
(+28 files in other folders)
