[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pact-passport"
version = "0.1.4"
description = "PACT Passport — agent ID. Self-certifying identity, holder-bound capabilities, audit receipts."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Benjamin Easington"}]
keywords = ["agent", "trust", "capability", "protocol", "identity", "ed25519", "pact"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pynacl>=1.5.0",
    "zeroconf>=0.131.0",
]

[project.optional-dependencies]
cbor = ["cbor2>=5.6.0"]
fast = ["uvicorn>=0.30.0"]
lak = ["local-agent-kit>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "coverage>=7.0"]

[project.scripts]
pact = "pact.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
