[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pact-passport"
version = "0.5.4"
description = "PACT Passport — agent ID. Self-certifying identity, holder-bound capabilities, audit receipts."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Benjamin Easington"}]
keywords = ["agent", "trust", "capability", "protocol", "identity", "ed25519", "pact"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]
dependencies = [
    "pynacl>=1.5.0",
    "zeroconf>=0.131.0",
]

[project.urls]
Homepage = "https://github.com/bene-art/pact-passport"
Source = "https://github.com/bene-art/pact-passport"
Issues = "https://github.com/bene-art/pact-passport/issues"
Documentation = "https://github.com/bene-art/pact-passport#readme"
Changelog = "https://github.com/bene-art/pact-passport/releases"
"Security policy" = "https://github.com/bene-art/pact-passport/security/policy"

[project.optional-dependencies]
cbor = ["cbor2>=5.6.0"]
fast = ["uvicorn>=0.30.0"]
lak = ["local-agent-kit>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "coverage>=7.0"]

[project.scripts]
pact = "pact.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
